TDST-20 : Fixed the issue with footer alignment in sidebar layout.

--- a/SideBar/css/sidebar.less
+++ b/SideBar/css/sidebar.less
@@ -217,14 +217,40 @@ body.sidebar-collapsed #content {
     transition: padding 0.2s, width 0.2s;
     padding-left: 280px;
     width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 #mainContent {
     padding-top: 15px;
     padding-bottom: 15px;
+    flex: 1 0 auto;
     h1 {
         text-align: center;
     }
 }
 .help-link {
     cursor: pointer;
+}
+footer {
+    flex: 0 0 auto;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #f5f5f5;
+}
+#btnSidebarHeader {
+    background: transparent;
+    border: 1px solid #fff;
+    padding: 5px 10px;
+}
+@media (max-width: 1023px) {
+  #content {
+    width: 100% !important;
+    padding-left: 0px !important;
+  }
+  #header #btnSidebarHeader {
+    display: block;
+    float: left;
+    margin-right: 10px;
+  }
 }
